--- a/.flowconfig
+++ b/.flowconfig
@@ -8,6 +8,4 @@ interfaces/
 [ignore]
 .*/coverage/.*
 .*/scripts/.*
-.*/node_modules/babel-.*/.*
-.*/node_modules/babylon/.*
-.*/node_modules/fbjs/.*
+.*/node_modules/*
