Switch to isotropy-graphql

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,11 +1,17 @@
 [include]
 
 [libs]
-interfaces/
 
 [options]
 
 [ignore]
 .*/coverage/.*
 .*/scripts/.*
-.*/node_modules/*
+.*/node_modules/babel-types/.*
+.*/node_modules/babel-generator/.*
+.*/node_modules/babel-helper-builder-binary-assignment-operator-visitor/.*
+.*/node_modules/babel-helper-explode-assignable-expression/.*
+.*/node_modules/babel-helper-remap-async-to-generator/.*
+.*/node_modules/babel-template/.*
+.*/node_modules/babel-traverse/.*
+.*/node_modules/babel-helper-regex/.*
