--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Jeswin Kumar <jeswinpk@agilehead.com>",
   "name": "isotropy-plugin-graphql",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Graphql plugin for Isotropy.",
   "scripts": {
     "test": "mocha dist/test/test.js"
@@ -13,12 +13,12 @@
   "main": "dist/isotropy-plugin-graphql",
   "license": "MIT",
   "dependencies": {
-    "graphql": "*",
-    "koa-convert": "*",
-    "koa-graphql": "*"
+    "isotropy-graphql": "*",
+    "isotropy-router": "*",
+    "graphql": "*"
   },
   "devDependencies": {
-    "koa": "2.0.0-alpha.3",
+    "isotropy-middleware-url": "*",
     "nodefunc-promisify": "*",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
